style: Prevent UI jumps by adding layout stability fixes
- Added separator StartMenu and GameGrid in App
- Set sxplicit height for GameGrid to avout layout shifts

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,3 +17,9 @@
 	width: 100%;
 	min-height: 100vh;
 }
+
+.bound {
+	width: calc(100% - 10px);
+	height: 1px;
+	background: #312E39;
+}
