--- a/src/components/GameGrid/GameGrid.scss
+++ b/src/components/GameGrid/GameGrid.scss
@@ -4,6 +4,7 @@
 	justify-content: center;
 
 	width: 100%;
+	height: 530px;
 }
 .grid .game-grid {
 	display: grid;
